[workspace]
members = ["macros"]

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Victor Fuentes"]
description = "Type-safe configuration loading from environment variables with helpful errors and documentation generation"
repository = "https://github.com/hauskens/config-loadr"
homepage = "https://github.com/hauskens/config-loadr"
documentation = "https://docs.rs/config-loadr"
keywords = ["config", "environment", "env", "dotenv", "configuration"]
categories = ["config", "development-tools"]
readme = "README.md"
exclude = [
  ".cargo",
  ".direnv",
  ".git",
  ".gitignore",
  "target",
  "flake.*",
  "result",
]

[package]
name = "config-loadr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
colored = "3"
config-loadr-macros = { version = "=0.8.0", path = "macros" }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
