[workspace]
members = ["macros"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Hauskens"]
description = "Type-safe configuration loading from environment variables with helpful errors and documentation generation"
repository = "https://github.com/hauskens/config-loadr"
homepage = "https://github.com/hauskens/config-loadr"
documentation = "https://github.com/hauskens/config-loadr/blob/main/README.md"
keywords = ["config", "environment", "macro", "dotenv", "configuration"]
categories = ["config", "development-tools"]
readme = "README.md"
exclude = [
  ".cargo",
  ".direnv",
  ".git",
  ".gitignore",
  "target",
  "flake.*",
  "result",
  "/src/cli.rs",
  ".envrc",
  "test.env",
]

[package]
name = "config-loadr"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true


[lib]
crate-type = ["rlib"]

[[bin]]
name = "util-cli"
path = "src/cli.rs"


[dependencies]
colored = "3"
config-loadr-macros = { version = "0.9", path = "macros" }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
